<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#BADDDA"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-67dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/profilePictureCard"
                android:layout_width="match_parent"
                android:layout_height="458dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/cardColor2"
                app:cardCornerRadius="10dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="252dp"
                        android:layout_height="429dp"
                        android:layout_gravity="center"
                        android:fadingEdge="horizontal|vertical"
                        android:fadingEdgeLength="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.496"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/alex_photo"
                        tools:layout_constraintCircleRadius="30dp" />

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/imageView"
                        app:layout_constraintVertical_bias="0.964" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/resumeCard"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:hapticFeedbackEnabled="false"
                app:cardBackgroundColor="@color/cardColor2"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/openResume"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cardColor1"
                        android:text="@string/resumeButtonText"
                        android:textSize="26sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/personalInfoCard"
                android:layout_width="match_parent"
                android:layout_height="123dp"
                android:layout_margin="5dp"
                android:background="#BADABB"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/personalInfoTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/PersonalInfoTitle"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/PersonalInfo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="10sp"
                        android:padding="5sp"
                        android:text="@string/homeTown" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/weatherCard"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="5dp"
                android:hapticFeedbackEnabled="false"
                app:cardBackgroundColor="@color/cardColor2"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="3229dp"
                    android:background="@drawable/clouds"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/weatherTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/weatherTitle"
                        android:textSize="30sp" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/weatherHome"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="5sp"
                                android:text="@string/weatherLoading"
                                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                                android:textSize="26sp" />

                            <TextView
                                android:id="@+id/weatherHere"
                                android:layout_width="match_parent"
                                android:layout_height="47dp"
                                android:padding="5sp"
                                android:text="@string/weatherLoading"
                                android:textColor="@android:color/primary_text_light"
                                android:textSize="26sp" />

                            <TextView
                                android:id="@+id/weatherHawaii"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:padding="5sp"
                                android:text="@string/weatherLoading"
                                android:textColor="@color/common_google_signin_btn_text_dark_focused"
                                android:textSize="26sp" />

                        </LinearLayout>
                    </HorizontalScrollView>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/PortfolioCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/cardColor1"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/PortfolioTitle"
                        android:textSize="30sp" />

                    <com.google.android.material.tabs.TabLayout
                        android:id="@+id/Portfolio"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/PortfolioMeTab"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/PorgfolioMeTitle" />

                        <com.google.android.material.tabs.TabItem
                            android:id="@+id/PortfolioParentsTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/PortfolioParentsTitle" />

                    </com.google.android.material.tabs.TabLayout>

                    <FrameLayout
                        android:id="@+id/PortfolioFrame"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </FrameLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/hobbiesCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/cardColor1"
                app:cardCornerRadius="20dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/HobbiesTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/hobbiesTitle"
                        android:textSize="30sp" />

                    <TextView
                        android:id="@+id/HobbiesBody"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10sp"
                        android:padding="5sp"
                        android:text="@string/hobbiesBody" />

                    <WebView
                        android:id="@+id/soundCloud"
                        android:layout_width="match_parent"
                        android:layout_height="168dp"
                        android:background="@color/cardColor1" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>